--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@babel/runtime": "^7.17.9",
+    "@googlemaps/js-api-loader": "^1.14.1",
     "@reduxjs/toolkit": "^1.8.1",
     "firebase": "^9.6.11",
     "react": "^18.0.0",
