--- a/package.json
+++ b/package.json
@@ -12,18 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "@babel/runtime": "^7.17.9",
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
     "@googlemaps/js-api-loader": "^1.14.1",
-    "@mui/material": "^5.8.1",
-    "@mui/styled-engine-sc": "^5.8.0",
     "@reduxjs/toolkit": "^1.8.1",
     "firebase": "^9.6.11",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-redux": "^8.0.0",
-    "react-router-dom": "^6.3.0",
-    "styled-components": "^5.3.5"
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.9",
@@ -41,7 +36,10 @@
     "eslint-plugin-react": "^7.29.4",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.0",
-    "webpack": "^5.72.0",
+    "resolve-url-loader": "^5.0.0",
+    "sass": "^1.52.1",
+    "sass-loader": "^13.0.0",
+    "webpack": "^5.72.1",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.8.1"
   }
